--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Happy Horse's Website"
+title = "Minruo's Website"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
