--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     favicon = "favicon-01.ico"
 
     [params.logo]
-    url = "logo.png"
+    url = "logo-01.png"
     width = 50
     height = 50
     alt = "Logo"
